--- a/user/create_new_project.html
+++ b/user/create_new_project.html
@@ -42,23 +42,24 @@
                 <p>Définissez le cadre, le client et l'équipe pour ce nouveau projet.</p>
             </div>
 
-            <form action="project.html">
+            <form id="submitform" action="" method="post">
                 
                 <div class="form-group-project">
                     <label for="nom_projet">Nom du projet <span class="text-required">*</span></label>
-                    <input type="text" id="nom_projet" name="nom_projet" class="form-control" placeholder="Ex: Refonte Site E-Commerce" required>
+                    <input type="text" id="nom_projet" name="nom_projet" class="form-control" placeholder="Ex: Refonte Site E-Commerce">
+                    <div id="project_name_error" class="error-text titanic">Le nom du projet est obligatoire.</div>
                 </div>
 
                 <div class="form-row">
                     <div class="form-group-project">
                         <label for="client">Client rattaché <span class="text-required">*</span></label>
-                        <select id="client" name="client" class="form-control" required>
-                            <option value="" disabled selected>-- Sélectionner --</option>
-                            <option value="greenmarket">GreenMarket SAS</option>
-                            <option value="dupond">Groupe Dupond</option>
-                            <option value="fastdelivery">FastDelivery</option>
-                            <option value="new">+ Nouveau client...</option>
+                        <select id="client" name="client" class="form-control" >
+                            <option disabled selected>-- Sélectionner --</option>
+                            <option>GreenMarket SAS</option>
+                            <option>Groupe Dupond</option>
+                            <option>FastDelivery</option>
                         </select>
+                        <div id="client_name_error" class="error-text titanic">Sélectionner un client rattaché.</div>
                     </div>
 
                     <div class="form-group-project">
@@ -86,7 +87,7 @@
 
                 <div class="form-group-project">
                     <label>Assigner l'équipe initiale</label>
-                    <div class="collabs-grid">
+                    <div class="collabs-grid" >
                         
                         <label style="display: flex;" class="collab-option">
                             <input type="checkbox" name="collabs" value="jd">
@@ -125,6 +126,7 @@
         </div>
 
     </div>
+    <script src="./../javascript/new_project.js"></script>
 
 </body>
 </html>
