Add_filters, data storage before php

--- a/login/login.html
+++ b/login/login.html
@@ -36,15 +36,17 @@
             </div>
         </div>
 
-        <form action="./../user/dashboard.html" method="GET">
+        <form id="login_form" action="./../user/dashboard.html" method="GET">
             <div class="form-group">
                 <label for="username">Identifiant</label>
-                <input type="email" id="username" value="username" placeholder="Entrez votre identifiant" required>
+                <input type="email" id="username" placeholder="Entrez votre identifiant">
+                <div id="username_error" class="error-text titanic">Veuillez entrer un identifiant valide.</div>
             </div>
 
             <div class="form-group">
                 <label for="password">Mot de passe</label>
-                <input type="password" id="password" value="password" placeholder="••••••••" required>
+                <input type="password" id="password" placeholder="••••••••">
+                <div id="password_error" class="error-text titanic">Veuillez entrer votre mot de passe.</div>
             </div>
 
             <button type="submit" class="btn-login">Se connecter</button>
@@ -53,5 +55,6 @@
         <a href="./../login/forget_password.html" class="forgot-password">Mot de passe oublié ?</a>
     </div>
 
+    <script src="./../javascript/login.js"></script>
 </body>
 </html>
