--- a/login/create_account.html
+++ b/login/create_account.html
@@ -46,25 +46,26 @@
             <div class="form-group">
                 <label>Prénom<span class="text-required">*</span></label>
                 <input id="account_first_name" type="text" name="prenom">
-                <div id="client_first_name_error" class="error-text titanic">Sélectionner un client rattaché.</div>
+                <div id="client_first_name_error" class="error-text titanic">Veuillez entrer un prénom valide.</div>
             </div>
 
             <div class="form-group">
                 <label>Nom<span class="text-required">*</span></label>
                 <input id="account_family_name" type="text" name="nom">
-                <div id="client_family_name_error" class="error-text titanic">Sélectionner un client rattaché.</div>
+                <div id="client_family_name_error" class="error-text titanic">Veuillez entrer un nom valide.</div>
             </div>
 
             <div class="form-group">
                 <label>Email professionnel<span class="text-required">*</span></label>
                 <input id="account_email" type="email" name="email">
-                <div id="client_email_error" class="error-text titanic">Sélectionner un client rattaché.</div>
+                <div id="client_email_error" class="error-text titanic">Veuillez entrer un email valide.</div>
             </div>
 
             <div class="form-group">
                 <label>Mot de passe provisoire<span class="text-required">*</span></label>
-                <input type="password" name="password">
-                <div id="client_name_error" class="error-text titanic">Sélectionner un client rattaché.</div>
+                <input id="account_password" type="password" name="password">             
+                <div id="password_error" class="error-text titanic">Veuillez entrer un mot de passe valide.</div>
+                <span class="required_password">Requis: 1 Majuscules, 1 Chiffre, Min 7 charactères</span>
             </div>
 
             <div class="form-group">
@@ -73,17 +74,16 @@
                     <option>Collaborateur (Interne)</option>
                     <option>Client (Externe)</option>
                 </select>
-                <div id="client_name_error" class="error-text titanic">Sélectionner un client rattaché.</div>
             </div>
 
             <div class="form-group">
                 <label>Entreprise rattachée<span class="text-required">*</span></label>
-                <select name="client_id">
-                    <option>-- Choisir une entreprise --</option>
+                <select id="account_firm" name="firm_id">
+                    <option disabled selected>-- Choisir une entreprise --</option>
                     <option>Entreprise A</option>
                     <option>Entreprise B</option>
                 </select>
-                <div id="client_name_error" class="error-text titanic">Sélectionner un client rattaché.</div>
+                <div id="firm_error" class="error-text titanic">Sélectionner une entreprise rattaché.</div>
             </div>
 
             <button type="submit" class="btn-login">Créer l'utilisateur</button>
