--- a/login/forget_password.html
+++ b/login/forget_password.html
@@ -25,7 +25,6 @@
 
 </head>
 
-
 <body>
 
     <div class="login-card">
@@ -40,10 +39,12 @@
             </div>
         </div>
 
-        <form action="confirm_email.html" method="GET">
+        <form id="forget_password_form" action="confirm_email.html" method="GET">
             <div class="form-group">
-                <label id="username">Adresse E-Mail<span class="text-required">*</span></label>
-                <input type="email" name="username" placeholder="Entrez votre E-Mail" required>
+                <label for="email_input">Adresse E-Mail<span class="text-required">*</span></label>
+                <input id="email_input" type="email" name="username" placeholder="Entrez votre E-Mail">
+                
+                <div id="email_error" class="error-text titanic">Veuillez entrer un email valide.</div>
             </div>
 
             <button type="submit" class="btn-login">Continue</button>
@@ -52,5 +53,6 @@
         <a href="#" class="forgot-password">Autres techniques ?</a>
     </div>
 
+    <script src="./../javascript/forget_password.js"></script>
 </body>
 </html>
