--- a/user/create_tickets.html
+++ b/user/create_tickets.html
@@ -42,22 +42,24 @@
                 <p>Veuillez remplir les informations ci-dessous pour ouvrir une demande.</p>
             </div>
 
-            <form action="tickets.html">
+            <form id="create_ticket_form" action="tickets.html">
                 
                 <div class="form-group">
                     <label for="titre">Sujet de la demande <span class="text-required">*</span></label>
-                    <input type="text" id="titre" name="titre" class="form-control" placeholder="Ex: Erreur lors du paiement..." required>
+                    <input type="text" id="titre" name="titre" class="form-control" placeholder="Ex: Erreur lors du paiement...">
+                    <div id="titre_error" class="error-text titanic">Veuillez entrer un sujet pour la demande.</div>
                 </div>
 
                 <div class="form-row">
                     <div class="form-group">
                         <label for="projet">Projet concerné <span class="text-required">*</span></label>
-                        <select id="projet" name="projet" class="form-control" required>
+                        <select id="projet" name="projet" class="form-control">
                             <option value="" disabled selected>-- Choisir un projet --</option>
                             <option value="ecommerce">Site E-Commerce Bio</option>
                             <option value="crm">CRM Interne</option>
                             <option value="vitrine">Site Vitrine</option>
                         </select>
+                        <div id="projet_error" class="error-text titanic">Veuillez sélectionner un projet concerné.</div>
                     </div>
 
                     <div class="form-group">
@@ -89,7 +91,8 @@
 
                 <div class="form-group">
                     <label for="description">Description détaillée <span class="text-required">*</span></label>
-                    <textarea id="description" name="description" class="form-control" placeholder="Décrivez le problème ou le besoin en détail..." required></textarea>
+                    <textarea id="description" name="description" class="form-control" placeholder="Décrivez le problème ou le besoin en détail..."></textarea>
+                    <div id="description_error" class="error-text titanic">Veuillez entrer une description détaillée.</div>
                 </div>
 
                 <div class="form-actions">
@@ -102,5 +105,6 @@
 
     </div>
 
+    <script src="./../javascript/create_ticket.js"></script>
 </body>
 </html>
