--- a/user/modif_project.html
+++ b/user/modif_project.html
@@ -15,7 +15,6 @@
         <div class="logo-container">
             <a href="dashboard.html"><img src="./../assets/FlowDesklogo.png" alt="Logo FlowDesk" class="logo-img"></a>
         </div>
-
         <nav class="main-nav">
             <ul>
                 <li><a href="dashboard.html">Tableau de bord</a></li>
@@ -42,23 +41,25 @@
                 <p>Re-définissez le cadre, le client et l'équipe pour ce projet.</p>
             </div>
 
-            <form action="project.html">
+            <form id="modif_project_form" action="project.html">
                 
                 <div class="form-group-project">
                     <label for="nom_projet">Nom du projet <span class="text-required">*</span></label>
-                    <input type="text" id="nom_projet" name="nom_projet" class="form-control" placeholder="Ex: Refonte Site E-Commerce" required>
+                    <input type="text" id="nom_projet" name="nom_projet" class="form-control" placeholder="Ex: Refonte Site E-Commerce">
+                    <div id="project_name_error" class="error-text titanic">Veuillez entrer un nom de projet valide.</div>
                 </div>
 
                 <div class="form-row">
                     <div class="form-group-project">
                         <label for="client">Client rattaché <span class="text-required">*</span></label>
-                        <select id="client" name="client" class="form-control" required>
+                        <select id="client" name="client" class="form-control">
                             <option value="" disabled selected>-- Sélectionner --</option>
                             <option value="greenmarket">GreenMarket SAS</option>
                             <option value="dupond">Groupe Dupond</option>
                             <option value="fastdelivery">FastDelivery</option>
                             <option value="new">+ Nouveau client...</option>
                         </select>
+                        <div id="client_error" class="error-text titanic">Veuillez sélectionner un client rattaché.</div>
                     </div>
 
                     <div class="form-group-project">
@@ -128,6 +129,7 @@
         </div>
 
     </div>
-
+    
+    <script src="./../javascript/modif_project.js"></script>
 </body>
 </html>
