--- a/user/modif_tickets.html
+++ b/user/modif_tickets.html
@@ -41,22 +41,24 @@
                 <p>Mettez à jour le statut, la priorité ou la description de la demande.</p>
             </div>
 
-            <form action="tickets.html">
+            <form id="modif_ticket_form" action="tickets.html">
                 
                 <div class="form-group">
                     <label for="titre">Sujet de la demande <span class="text-required">*</span></label>
-                    <input type="text" id="titre" name="titre" class="form-control" value="Correction Bug Login" required>
+                    <input type="text" id="titre" name="titre" class="form-control" value="Correction Bug Login">
+                    <div id="titre_error" class="error-text titanic">Veuillez entrer un sujet pour la demande.</div>
                 </div>
 
                 <div class="form-row">
                     <div class="form-group">
                         <label for="projet">Projet concerné <span class="text-required">*</span></label>
-                        <select id="projet" name="projet" class="form-control" required>
-                            <option value="" disabled selected>Veuillez choisir un site</option>
+                        <select id="projet" name="projet" class="form-control">
+                            <option value="" disabled>Veuillez choisir un site</option>
                             <option value="ecommerce">Site E-Commerce Bio</option>
                             <option value="crm">CRM Interne</option>
                             <option value="vitrine">Site Vitrine</option>
                         </select>
+                        <div id="projet_error" class="error-text titanic">Veuillez sélectionner un projet valide.</div>
                     </div>
 
                     <div class="form-group">
@@ -93,13 +95,14 @@
 
                 <div class="form-group">
                     <label for="description">Description détaillée <span class="text-required">*</span></label>
-                    <textarea id="description" name="description" class="form-control" required>Bonjour,
+                    <textarea id="description" name="description" class="form-control">Bonjour,
 
                         Sur la version mobile (iPhone 14), le bouton de connexion se chevauche avec le logo. Il est impossible de cliquer dessus.
                         Le problème semble venir du CSS sur les écrans < 400px.
 
                         Merci de corriger rapidement avant la mise en prod.
                     </textarea>
+                    <div id="description_error" class="error-text titanic">Veuillez entrer une description détaillée.</div>
                 </div>
 
                 <div class="form-actions">
@@ -114,5 +117,6 @@
 
     </div>
 
+    <script src="./../javascript/modif_ticket.js"></script>
 </body>
 </html>
