premier fichier php avec gestion serveur des fichier modif et creation

--- a/user/bills.html
+++ b/user/bills.html
@@ -35,7 +35,7 @@
     <div class="content">
         <div class="page-actions">
             <h1>Factures & Devis</h1>
-            <a href="new_bills.html" class="btn-create">+ Nouvelle Facture</a>
+            <a href="new_bills.php" class="btn-create">+ Nouvelle Facture</a>
         </div>
 
         <div class="table-card">
