--- a/user/contacts.html
+++ b/user/contacts.html
@@ -37,7 +37,7 @@
         
         <div class="page-actions">
             <h1>Répertoire Contacts</h1>
-            <a href="new_contacts.html" class="btn-create">+ Nouveau Contact</a>
+            <a href="new_contacts.php" class="btn-create">+ Nouveau Contact</a>
         </div>
 
         <div class="table-card">
@@ -167,7 +167,7 @@
             </div>
 
             <div class="modal-footer" style="display: flex; justify-content: space-between;">
-                <a href="modif_contacts.html" class="btn-edit-contact">Modifier le contact</a>
+                <a href="modif_contacts.php" class="btn-edit-contact">Modifier le contact</a>
                 <a href="#" class="btn-supr">Supprimer le contact</a>
                 <a href="#" class="btn-modal-action" style="background-color: #334155; border: 1px solid #475569;">Fermer</a>
             </div>
