--- a/user/documents.html
+++ b/user/documents.html
@@ -38,7 +38,7 @@
         
         <div class="page-actions">
             <h1>Documents & Fichiers</h1>
-            <a href="new_documents.html" class="btn-create">Importer un fichier</a>
+            <a href="new_documents.php" class="btn-create">Importer un fichier</a>
         </div>
 
         <div class="table-card">
