--- a/user/project.html
+++ b/user/project.html
@@ -36,7 +36,7 @@
     <div class="content">
         <div class="page-actions">
             <h1>Liste des Projets</h1>
-            <a href="create_new_project.html" class="btn-create">+ Nouveau Projet</a>
+            <a href="create_new_project.php" class="btn-create">+ Nouveau Projet</a>
         </div>
 
         <div class="projects-grid">
@@ -70,7 +70,7 @@
                         <div class="avatar av-yellow">JD</div>
                         <div class="avatar av-pink">AL</div>
                     </div>
-                    <a href="modif_project.html" class="btn-add-collab">+ Collaborateur</a>
+                    <a href="modif_project.php" class="btn-add-collab">+ Collaborateur</a>
                 </div>
                 <a href="#popup-project-1" class="btn-project-details">+ de détails</a>
             </article>
@@ -99,7 +99,7 @@
                     <div class="avatars">
                         <div class="avatar av-blue">MR</div>
                     </div>
-                    <a href="modif_project.html" class="btn-add-collab">+ Collaborateur</a>
+                    <a href="modif_project.php" class="btn-add-collab">+ Collaborateur</a>
                 </div>
                 <a href="#popup-project-1" class="btn-project-details">+ de détails</a>
             </article>
@@ -134,7 +134,7 @@
                         <div class="avatar av-green">KT</div>
                         <div class="avatar av-purple">SS</div>
                     </div>
-                    <a href="modif_project.html" class="btn-add-collab">+ Collaborateur</a>
+                    <a href="modif_project.php" class="btn-add-collab">+ Collaborateur</a>
                 </div>
                 <a href="#popup-project-1" class="btn-project-details">+ de détails</a>
             </article>
@@ -245,8 +245,8 @@
             </div>
 
             <div class="modal-footer modal-footer-flex">
-                <a href="modif_project.html" class="btn-cancel btn-outline-primary">✎ Modifier le projet</a>
-                <a href="modif_project.html" class="btn-submit">+ Ajouter Collaborateur</a>
+                <a href="modif_project.php" class="btn-cancel btn-outline-primary">✎ Modifier le projet</a>
+                <a href="modif_project.php" class="btn-submit">+ Ajouter Collaborateur</a>
             </div>
 
         </div>
