--- a/user/tickets.html
+++ b/user/tickets.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -42,7 +43,7 @@
                         <th>Description</th>
                         <th>État</th>
                         <th class="text-right">
-                            <a href="create_tickets.html" class="btn-create">+ Nouveau Ticket</a>
+                            <a href="create_tickets.php" class="btn-create">+ Nouveau Ticket</a>
                         </th>
                     </tr>
                 </thead>
@@ -129,7 +130,7 @@
             </div>
 
             <div class="modal-footer">
-                <a href="modif_tickets.html" class="btn-cancel btn-outline-primary">✎ Modifier le ticket</a>
+                <a href="modif_tickets.php" class="btn-cancel btn-outline-primary">✎ Modifier le ticket</a>
                 <a href="#" class="btn-modal-action">Fermer</a>
                 
             </div>
