--- a/user/dashboard.html
+++ b/user/dashboard.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="dashboard.html" class="active">Tableau de bord</a></li>
                 <li><a href="project.html">Mes Projets</a></li>
-                <li><a href="tickets.html">Tickets</a></li>
+                <li><a href="tickets.php">Tickets</a></li>
                 <li><a href="bills.html">Facturation</a></li>
                 <li><a href="documents.html">Documents</a></li>
                 <li><a href="contacts.html">Contacts</a></li>
